force-app/main/default/objects/Catalog_Delta_Run__c/Catalog_Delta_Run__c.object-meta.xml
<CustomObject>
    <label>Catalog Delta Run</label>
    <nameField>
        <displayFormat>DELTA-{000000}</displayFormat>
        <label>Delta Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalog Delta Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>