force-app/main/default/objects/Catalog_Delta_Run__c/fields/BaselineTimestamp__c.field-meta.xml
<CustomField>
    <fullName>BaselineTimestamp__c</fullName>
    <description>Exclusive lower watermark captured for this delta run.</description>
    <label>Baseline Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>