force-app/main/default/objects/Catalog_Delta_Run__c/fields/CleanupAsyncJobId__c.field-meta.xml
<CustomField>
    <fullName>CleanupAsyncJobId__c</fullName>
    <description>Async Apex job deleting transient work items.</description>
    <label>Cleanup Async Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>