force-app/main/default/objects/Catalog_Delta_Run__c/fields/CleanupStatus__c.field-meta.xml
<CustomField>
    <fullName>CleanupStatus__c</fullName>
    <description>Lifecycle state of transient work-item cleanup.</description>
    <label>Cleanup Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Running</fullName><default>false</default><label>Running</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>