force-app/main/default/objects/Catalog_Delta_Run__c/fields/CompletedAt__c.field-meta.xml
<CustomField>
    <fullName>CompletedAt__c</fullName>
    <description>Time at which the delta pipeline reached a terminal state.</description>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>