force-app/main/default/objects/Catalog_Delta_Run__c/fields/ConfigDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>ConfigDeveloperName__c</fullName>
    <description>Developer name of the delta catalog job configuration used by this run.</description>
    <label>Config Developer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>