force-app/main/default/objects/Catalog_Delta_Run__c/fields/CurrentAsyncJobId__c.field-meta.xml
<CustomField>
    <fullName>CurrentAsyncJobId__c</fullName>
    <description>Async Apex job currently processing this delta run.</description>
    <label>Current Async Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>