force-app/main/default/objects/Catalog_Delta_Run__c/fields/CutoffTimestamp__c.field-meta.xml
<CustomField>
    <fullName>CutoffTimestamp__c</fullName>
    <description>Inclusive upper watermark captured for this delta run.</description>
    <label>Cutoff Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>