force-app/main/default/objects/Catalog_Delta_Run__c/fields/ExportProductCount__c.field-meta.xml
<CustomField>
    <fullName>ExportProductCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Products in the final active catalog and filter scope.</description>
    <label>Export Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>