force-app/main/default/objects/Catalog_Delta_Run__c/fields/ImpactedProductCount__c.field-meta.xml
<CustomField>
    <fullName>ImpactedProductCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Unique products discovered from all supported change sources.</description>
    <label>Impacted Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>