force-app/main/default/objects/Catalog_Delta_Run__c/fields/InitialAsyncJobId__c.field-meta.xml
<CustomField>
    <fullName>InitialAsyncJobId__c</fullName>
    <description>Async Apex job that started the persisted delta pipeline.</description>
    <label>Initial Async Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>