force-app/main/default/objects/Catalog_Delta_Run__c/fields/LastHeartbeatAt__c.field-meta.xml
<CustomField>
    <fullName>LastHeartbeatAt__c</fullName>
    <description>Last time a pipeline stage updated this run.</description>
    <label>Last Heartbeat At</label>
    <type>DateTime</type>
</CustomField>