force-app/main/default/objects/Catalog_Delta_Run__c/fields/PricebookLabelsJson__c.field-meta.xml
<CustomField>
    <fullName>PricebookLabelsJson__c</fullName>
    <description>JSON map of Pricebook IDs to payload keys captured at launch.</description>
    <label>Pricebook Labels JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>