force-app/main/default/objects/Catalog_Delta_Run__c/fields/PricebookScopeFiltered__c.field-meta.xml
<CustomField>
    <fullName>PricebookScopeFiltered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when price discovery is restricted to Standard plus a configured custom Pricebook scope.</description>
    <label>Pricebook Scope Filtered</label>
    <type>Checkbox</type>
</CustomField>