force-app/main/default/objects/Catalog_Delta_Run__c/fields/ResolvedPricebookIdsJson__c.field-meta.xml
<CustomField>
    <fullName>ResolvedPricebookIdsJson__c</fullName>
    <description>JSON array of custom Pricebook IDs captured at launch.</description>
    <label>Resolved Pricebook Ids JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>