force-app/main/default/objects/Catalog_Delta_Run__c/fields/ResolvedTargetKey__c.field-meta.xml
<CustomField>
    <fullName>ResolvedTargetKey__c</fullName>
    <description>Stable export target key captured when this delta run starts.</description>
    <externalId>true</externalId>
    <label>Resolved Target Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>