force-app/main/default/objects/Catalog_Delta_Run__c/fields/RootProductCount__c.field-meta.xml
<CustomField>
    <fullName>RootProductCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Unique changed product-family roots resolved by the pipeline.</description>
    <label>Root Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>