force-app/main/default/objects/Catalog_Delta_Run__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Current discovery, expansion, export, or cleanup stage.</description>
    <label>Stage</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>