force-app/main/default/objects/Catalog_Delta_Run__c/fields/StandardPricebookId__c.field-meta.xml
<CustomField>
    <fullName>StandardPricebookId__c</fullName>
    <description>Standard Price Book ID captured at launch.</description>
    <label>Standard Pricebook Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>