force-app/main/default/objects/Catalog_Delta_Run__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Overall lifecycle state of the multi-stage delta pipeline.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Queued</fullName><default>true</default><label>Queued</label></value>
            <value><fullName>Running</fullName><default>false</default><label>Running</label></value>
            <value><fullName>Succeeded</fullName><default>false</default><label>Succeeded</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>CancelRequested</fullName><default>false</default><label>Cancel Requested</label></value>
            <value><fullName>Canceled</fullName><default>false</default><label>Canceled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>